# LifeEngineOptimized

./: Cargo.toml  Dockerfile  README  build.sh  clean.sh  compose.yaml  debug_build.sh  index.html  install_wasm_bindgen.sh
renderer-native/: Cargo.toml
renderer-native/src/: main.rs
renderer-wasm/: Cargo.toml
renderer-wasm/src/: lib.rs  utils.rs
simulation/: Cargo.toml
simulation/src/: lib.rs  organism.rs
