[package]
name = "simulation"
version = "0.1.0"
edition = "2021" # Use 2021 edition for stability

[dependencies]
rand = "0.8.5"
rand_core = "0.6.3"  # Explicit core dependency
rand_chacha = "0.3.1"  # Optional, but can help with randomness
# Explicitly pin getrandom to a version known to work with wasm
getrandom = { version = "=0.2.8", features = ["js"] }